--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+geonode (1.0.final+1) unstable; urgency=low
+  * Add dependency on patch command
+
+ -- David Winslow <dwinslow@opengeo.org>  Tue, 14 Dec 2010 17:44:33 -0500
+
 geonode (1.0+final) unstable; urgency=low
   * Update to GeoNode 1.0-final
 
