Changed revision number to beta4 and added build dependency on unzip. This package has been uploaded to the following PPA: ingenieroariel/ppa

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-geonode (1.1+RC) unstable; urgency=low
+geonode (1.1-beta4) natty; urgency=low
   * Using latest master, after move to /geoserver
 
  -- Ariel Nunez <ingenieroariel@gmail.com>  Sun, 28 Aug 2011 17:44:33 -0500
