--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+geonode (1.1-rc1+1) natty; urgency=low
+  * Fixed path to geoserver data dir
+
+ -- Ariel Nunez <ingenieroariel@gmail.com>  Fri, 2 Sept 2011 13:44:33 -0500
+
+
 geonode (1.1-rc1) natty; urgency=low
   * After creating installer
 
