--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+geonode (1.1+final) lucid; urgency=low
+  * Moved from SPEED to Partial Buffer in GeoServer's output strategy
+  * Proper upgrade support
+  * Fixed location of GeoServer's data dir
+
+ -- Ariel Nunez <ingenieroariel@gmail.com>  Sun, 5 Feb 2011 18:44:33 -0500
+
 geonode (1.1+RC2) lucid; urgency=low
   * Fixed avatar links
   * Added virtualenv upgrade to the installer to avoid bugs in Lucid
@@ -8,7 +15,6 @@ geonode (1.1+RC2) lucid; urgency=low
   * Fixed path to geoserver data dir
 
  -- Ariel Nunez <ingenieroariel@gmail.com>  Fri, 2 Sept 2011 13:44:33 -0500
-
 
 geonode (1.1-rc1) natty; urgency=low
   * After creating installer
