--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+geonode (1.1.1+final2) lucid; urgency=low
+  * Fixed bug in first time installs.
+
+ -- Ariel Nunez <ingenieroariel@gmail.com>  Thu, 19 Mar 2012 18:44:33 -0500
+
 geonode (1.1.1+final) lucid; urgency=low
   * Fixed bug in deleting layers using a postgis backend.
 
